--- a/manifesto.html
+++ b/manifesto.html
@@ -7,7 +7,7 @@
     <meta content="https://goraved.github.io/manifesto.html" property="og:url">
     <meta content="Roman Pobotin - AQA Manifesto" property="og:site_name">
     <meta content="website" property="og:type">
-    <meta content="./assets/avatar.jpg" property="og:image">
+    <meta content="https://goraved.github.io/assets/images/avatar.jpg" property="og:image">
     <meta content="Roman Pobotin's comprehensive QA Automation (SDET) Manifesto detailing principles for modern quality assurance, blending QA, Development, and DevOps practices."
           property="og:description">
     <meta content="index, follow" name="robots">
@@ -18,7 +18,7 @@
     <meta content="Roman Pobotin - QA Automation & SDET" name="twitter:title"/>
     <meta content="Discover the QA Automation (SDET) Manifesto by Roman Pobotin — a guide to effective software quality practices and test automation strategy."
           name="twitter:description"/>
-    <meta content="./assets/avatar.jpg" name="twitter:image"/>
+    <meta content="https://goraved.github.io/assets/images/avatar.jpg" name="twitter:image"/>
     <title>QA Automation Manifesto by Roman Pobotin | Best Practices for SDETs</title>
     <meta content="Discover the QA Automation (SDET) Manifesto by Roman Pobotin — a guide to effective software quality practices and test automation strategy."
           name="description">
